@@ -1,5 +1,12 @@
 -- Release 0.16 --
 
+2004-05-25  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/draw_amacro.c: Now aperture macros handles exposures properly,
+	  so some thermals can be drawn properly. Inspired by discussion with
+	  Dimitri.
+
+
 2004-05-19  Stefan Petersen  <spe@stacken.kth.se>
 
 	* man/gerbv.1.in, src/Makefile.am, src/drill.c, src/gerbv.c, 
